--- a/css/style0702.css
+++ b/css/style0702.css
@@ -187,7 +187,7 @@ body{
 
 .g-crumb .small-nav li{
 	display: inline-block;
-	font:normal 16px/1.4 "Microsoft YaHei","Arial","sans-serif"
+	font:normal 16px/1.4 "Microsoft YaHei","Arial","sans-serif";
 }
 
 .g-crumb .small-nav li+li{
@@ -333,7 +333,6 @@ body{
 .m-gallery{
 	width: 100%;
 	height: 220px;
-	overflow: hidden;
 }
 
 .m-gallery .u-gallery{
